[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "racerbot_utility"
version = "0.1.0"
description = "Contains various shorthands for setting up the RoboRacer simulator/environment"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
racerbot-utility = "racerbot_utility.main:main"