[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "racerbot_utility"
version = "0.1.0"
description = "Streamlines ROS 2 development and testing for the RoboRacer simulator"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
racerbot-utility = "racerbot_utility.main:main"
